err
rover.rdl:3:11: error: mismatched input '{' expecting ';'
    rsseg {
          ^
rover.rdl:17:5: error: extraneous input '}' expecting {<EOF>, 'alias', 'external', 'internal', 'addrmap', 'regfile', 'reg', 'field', 'mem', 'signal', 'rclr', 'rset', 'woset', 'woclr', 'hw', 'sw', 'posedge', 'negedge', 'bothedge', 'level', 'nonsticky', 'abstract', 'constraint', 'default', 'enum', 'encode', 'property', 'struct', ID}
    } CMDREGISTER@0x2D;
    ^
rover.rdl:17:18: error: mismatched input '@' expecting ';'
    } CMDREGISTER@0x2D;
                 ^
fatal: Parse aborted due to previous errors
File:  rover.rdl
